--- a/spotifypred.ipynb
+++ b/spotifypred.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -366,16 +366,7 @@
       "loudness           ->  0.286 (abs)\n",
       "valence            ->  0.251 (abs)\n",
       "acousticness       ->  0.246 (abs)\n",
-      "energy             ->  0.177 (abs)\n",
-      "time_signature     ->  0.105 (abs)\n",
-      "mode               ->  0.080 (abs)\n",
-      "duration_ms        ->  0.074 (abs)\n",
-      "sections           ->  0.060 (abs)\n",
-      "liveness           ->  0.051 (abs)\n",
-      "chorus_hit         ->  0.046 (abs)\n",
-      "speechiness        ->  0.041 (abs)\n",
-      "tempo              ->  0.033 (abs)\n",
-      "key                ->  0.010 (abs)\n"
+      "energy             ->  0.177 (abs)\n"
      ]
     }
    ],
@@ -385,7 +376,7 @@
     "\n",
     "print('The most linearly correlated features to POPULARITY are:')\n",
     "for i, row in enumerate(series):\n",
-    "    if 0.0 <= row < 1:\n",
+    "    if 0.11 <= row < 1:\n",
     "      print(f'{series.index[i]:18} -> {row: .3f} (abs)')"
    ]
   },
