--- a/spotifypred.ipynb
+++ b/spotifypred.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## todo\n",
-    "Write down analysis/insights for each song trait, relationship with popularity\n",
-    "\n",
-    "https://www.kaggle.com/code/anatpeled/spotify-popularity-prediction"
+    "## SC1015 Intro to Data Science and AI AY 21/22 Sem 2 Mini-Project"
    ]
   },
   {
