--- a/spotifypred.ipynb
+++ b/spotifypred.ipynb
@@ -9,17 +9,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: yellowbrick in /home/zhao/.local/lib/python3.8/site-packages (1.4)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.0 in /home/zhao/.local/lib/python3.8/site-packages (from yellowbrick) (1.0.2)\n",
+      "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.2 in /home/zhao/.local/lib/python3.8/site-packages (from yellowbrick) (3.5.1)\n",
+      "Requirement already satisfied: scipy>=1.0.0 in /home/zhao/.local/lib/python3.8/site-packages (from yellowbrick) (1.7.3)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in /home/zhao/.local/lib/python3.8/site-packages (from yellowbrick) (1.21.3)\n",
+      "Requirement already satisfied: cycler>=0.10.0 in /home/zhao/.local/lib/python3.8/site-packages (from yellowbrick) (0.11.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/zhao/.local/lib/python3.8/site-packages (from scikit-learn>=1.0.0->yellowbrick) (3.1.0)\n",
+      "Requirement already satisfied: joblib>=0.11 in /home/zhao/.local/lib/python3.8/site-packages (from scikit-learn>=1.0.0->yellowbrick) (1.1.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.2->yellowbrick) (1.3.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.2->yellowbrick) (3.0.6)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.2->yellowbrick) (4.28.5)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.2->yellowbrick) (9.0.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.2->yellowbrick) (21.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.2->yellowbrick) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/zhao/.local/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib!=3.0.0,>=2.0.2->yellowbrick) (1.16.0)\n",
+      "Requirement already satisfied: wordcloud in /home/zhao/.local/lib/python3.8/site-packages (1.8.1)\n",
+      "Requirement already satisfied: numpy>=1.6.1 in /home/zhao/.local/lib/python3.8/site-packages (from wordcloud) (1.21.3)\n",
+      "Requirement already satisfied: matplotlib in /home/zhao/.local/lib/python3.8/site-packages (from wordcloud) (3.5.1)\n",
+      "Requirement already satisfied: pillow in /home/zhao/.local/lib/python3.8/site-packages (from wordcloud) (9.0.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib->wordcloud) (4.28.5)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib->wordcloud) (3.0.6)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib->wordcloud) (21.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib->wordcloud) (1.3.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib->wordcloud) (0.11.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/zhao/.local/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib->wordcloud) (1.16.0)\n",
+      "Requirement already satisfied: pandas in /home/zhao/.local/lib/python3.8/site-packages (1.3.5)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /home/zhao/.local/lib/python3.8/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/zhao/.local/lib/python3.8/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.17.3; platform_machine != \"aarch64\" and platform_machine != \"arm64\" and python_version < \"3.10\" in /home/zhao/.local/lib/python3.8/site-packages (from pandas) (1.21.3)\n",
+      "Requirement already satisfied: six>=1.5 in /home/zhao/.local/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
+      "Requirement already satisfied: matplotlib in /home/zhao/.local/lib/python3.8/site-packages (3.5.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib) (1.3.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib) (3.0.6)\n",
+      "Requirement already satisfied: numpy>=1.17 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib) (1.21.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib) (9.0.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib) (4.28.5)\n",
+      "Requirement already satisfied: six>=1.5 in /home/zhao/.local/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Requirement already satisfied: seaborn in /home/zhao/.local/lib/python3.8/site-packages (0.11.2)\n",
+      "Requirement already satisfied: numpy>=1.15 in /home/zhao/.local/lib/python3.8/site-packages (from seaborn) (1.21.3)\n",
+      "Requirement already satisfied: pandas>=0.23 in /home/zhao/.local/lib/python3.8/site-packages (from seaborn) (1.3.5)\n",
+      "Requirement already satisfied: matplotlib>=2.2 in /home/zhao/.local/lib/python3.8/site-packages (from seaborn) (3.5.1)\n",
+      "Requirement already satisfied: scipy>=1.0 in /home/zhao/.local/lib/python3.8/site-packages (from seaborn) (1.7.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/zhao/.local/lib/python3.8/site-packages (from pandas>=0.23->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /home/zhao/.local/lib/python3.8/site-packages (from pandas>=0.23->seaborn) (2021.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib>=2.2->seaborn) (3.0.6)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib>=2.2->seaborn) (1.3.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib>=2.2->seaborn) (9.0.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib>=2.2->seaborn) (4.28.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/zhao/.local/lib/python3.8/site-packages (from matplotlib>=2.2->seaborn) (21.3)\n",
+      "Requirement already satisfied: six>=1.5 in /home/zhao/.local/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas>=0.23->seaborn) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install yellowbrick\n",
-    "!pip install wordcloud"
+    "!pip install wordcloud\n",
+    "!pip install pandas\n",
+    "!pip install matplotlib\n",
+    "!pip install seaborn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,19 +159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-3-e72b908df5c7>:15: SettingWithCopyWarning: \n",
+      "<ipython-input-5-e72b908df5c7>:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  allsongs['decade'][i] += 1900\n",
-      "<ipython-input-3-e72b908df5c7>:17: SettingWithCopyWarning: \n",
+      "<ipython-input-5-e72b908df5c7>:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -300,7 +365,7 @@
        "4           0    1960  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
